--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "projectmark-takehome",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
     "test": "jest"
   },
