--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "chalk": "^4.1.2",
     "chokidar": "^3.6.0",
     "chownr": "^2.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "clean-stack": "^2.2.0",
     "cliui": "^8.0.1",
     "color-convert": "^2.0.1",
