--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "seed": "ts-node --transpile-only src/seed.ts"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.9",
